# fibras-tracker

./: .gitignore  CLAUDE.md  README.md  app.py  config.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: catalog.json  distributions.json  fundamentals.json  inflation.json  portfolio.json  positions.json
data/historical/: danhos13.json  fibrapl14.json  fmty14.json  fshop13.json  fundamentals.json
modules/common/models/: __init__.py  fibra.py  inflation_record.py  market_price.py
modules/common/repositories/: __init__.py  json_catalog_read_repository.py  json_inflation_read_repository.py  yfinance_market_price_read_repository.py
modules/common/schemas/: __init__.py  base_service_schema.py
modules/fundamentals/models/: __init__.py  annual_fundamentals_record.py  enriched_fundamentals_record.py  fibra_metrics.py  fundamentals_history.py  fundamentals_record.py
modules/fundamentals/processors/: __init__.py  annual_fundamentals_processor.py  fundamentals_history_processor.py  fundamentals_processor.py
modules/fundamentals/repositories/: __init__.py  json_fundamentals_read_repository.py
modules/fundamentals/schemas/: __init__.py  fundamentals_schemas.py
modules/fundamentals/services/: __init__.py  (+1 more)
tests/fundamentals/: test_annual_fundamentals_processor.py  test_fundamentals_history_processor.py  test_fundamentals_processor.py
tests/portfolio/: test_distributions_processor.py  test_portfolio_processor.py  test_positions_processor.py
ui/pages/: fundamentals.py  home.py  portfolio.py  radar.py
ui/styles/: theme.py
(+41 files in other folders)
