[project]
name = "fibras-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "flake8>=7.3.0",
    "pandas==2.2.0",
    "plotly==6.7.0",
    "pydantic==2.13.4",
    "pymupdf>=1.27.2.3",
    "pytest==9.0.3",
    "streamlit==1.56.0",
    "yfinance==1.2.0",
]
